<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            app:cardCornerRadius="50dp">

            <ImageView
                android:id="@+id/aboutimg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_person_24" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/displayname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cv_img"
            android:layout_centerHorizontal="true"
            android:text="Aljon Acuna"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/viewmore"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@id/displayname"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />

        <ImageView
            android:id="@+id/viewless"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@id/displayname"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/QnA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/displayname"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto"
                android:text="@string/firstquestion"
                android:textColor="@color/blackline"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ans1View"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:enabled="false"
                android:text="To become a professional programmer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/secondquestion"
                android:textColor="@color/blackline"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ans2View"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:enabled="false"
                android:text="26" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/thirdquestion"
                android:textColor="@color/blackline"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ans3View"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:enabled="false"
                android:text="aljon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/fourthquestion"
                android:textColor="@color/blackline"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ans4View"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:enabled="false"
                android:text="Blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/fifthquestion"
                android:textColor="@color/blackline"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ans5View"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:enabled="false"
                android:text="Ice cream" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>