<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".GUI.EditEntry">

    <RelativeLayout
        android:id="@+id/rel_editEnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/startcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/closebtn_editEnt"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_baseline_close_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="Edit Entry"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/savebtn_EditEnt"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:src="@drawable/ic_baseline_check_24"
            tools:ignore="ContentDescription"/>
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rel_editEnt">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/ic_wave"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:id="@+id/replace_img"
                    android:layout_width="match_parent"
                    android:layout_height="210dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/dash_border">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_circleimgedit"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_centerInParent="true"
                        app:cardCornerRadius="90dp">

                        <ImageView
                            android:id="@+id/imguser_editEnt"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_baseline_person_24"
                            tools:ignore="ContentDescription" />
                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fname_editEnt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="4dp"
                    app:startIconDrawable="@drawable/ic_baseline_person_24"
                    app:startIconTint="@color/white"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fnam_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusable="false"
                        android:hint="First name"
                        android:background="@drawable/textboxstyle"
                        android:textColorHint="@color/white"
                        android:textColor="@color/white"
                        android:fontFamily="@font/roboto"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lname_editEnt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="8dp"
                    app:startIconTint="@color/white"
                    app:hintEnabled="false"
                    app:startIconDrawable="@drawable/ic_baseline_person_24"
                    android:layout_marginRight="4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lname_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusable="false"
                        android:hint="Last name"
                        android:background="@drawable/textboxstyle"
                        android:textColorHint="@color/white"
                        android:textColor="@color/white"
                        android:fontFamily="@font/roboto"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/firstquestion"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/ans1_editEnt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:padding="10dp"
                    android:drawableStart="@drawable/ic_baseline_question_answer_24"
                    android:drawablePadding="15dp"
                    android:drawableTint="@color/white"
                    android:background="@drawable/textboxstyle"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:focusable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/secondquestion"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/ans2_editEnt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:padding="10dp"
                    android:drawableStart="@drawable/ic_baseline_question_answer_24"
                    android:drawablePadding="15dp"
                    android:drawableTint="@color/white"
                    android:background="@drawable/textboxstyle"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:focusable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/thirdquestion"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/ans3_editEnt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:padding="10dp"
                    android:drawableStart="@drawable/ic_baseline_question_answer_24"
                    android:drawablePadding="15dp"
                    android:drawableTint="@color/white"
                    android:background="@drawable/textboxstyle"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:focusable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/fourthquestion"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/ans4_editEnt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:drawableStart="@drawable/ic_baseline_question_answer_24"
                    android:drawablePadding="15dp"
                    android:drawableTint="@color/white"
                    android:background="@drawable/textboxstyle"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:padding="10dp"
                    android:focusable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/fifthquestion"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/ans5_editEnt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/textboxstyle"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:padding="10dp"
                    android:drawableStart="@drawable/ic_baseline_question_answer_24"
                    android:drawablePadding="15dp"
                    android:drawableTint="@color/white"
                    android:layout_marginBottom="15dp"
                    android:focusable="false" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>